# fastkit-i18n

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: test_publish.yaml
src/fastkit-translation/i18n/: translation.py
src/fastkit_i18n/: __init__.py  locale.py
src/fastkit_i18n/database/: translatable.py
src/fastkit_i18n/i18n/: translation.py
src/fastkit_i18n/middleware/: __init__.py  middleware.py
src/fastkit_translation/: __init__.py  locale.py
src/fastkit_translation/database/: translatable.py
src/fastkit_translation/i18n/: translation.py
src/fastkit_translation/middleware/: middleware.py
tests/: test_database_translatable.py  test_i18n.py  test_middleware.py  test_sqlmodel_compat.py
