[project]
name = "fastkit-translation"
version = "0.1.0"
description = "Laravel-style i18n for FastAPI. JSON translation files, automatic locale detection, translatable SQLAlchemy models, and translated Pydantic validation errors — without touching a framework."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FastKit", email = "hello@fastkit.org"}
]
dependencies = []

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.22",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
module-root = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
