[project]
name = "fastkit-i18n"
version = "1.0.0"
description = "Laravel-style i18n for FastAPI. JSON translation files, automatic locale detection, and translatable SQLAlchemy/SQLModel models — without touching a framework."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FastKit", email = "hello@fastkit.org"}
]
keywords = [
    "fastapi",
    "i18n",
    "internationalization",
    "localization",
    "l10n",
    "translation",
    "locale",
    "sqlalchemy",
    "sqlmodel",
    "pydantic",
    "asgi",
    "middleware",
    "laravel",
    "fastkit",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://fastkit.org"
Documentation = "https://fastkit.org/docs/fastkit-i18n"
Repository = "https://github.com/fastkit-org/fastkit-i18n"
Issues = "https://github.com/fastkit-org/fastkit-i18n/issues"
Changelog = "https://github.com/fastkit-org/fastkit-i18n/blob/main/CHANGELOG.md"

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.22",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
module-root = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
